# research-tool

./: .gitignore  ADR-001-storage-model.md  ADR-002-agent-provider-abstraction.md  ADR-003-object-relationships.md  ADR-004-discovery-cli-contract.md  ADR-005-discovery-seed-resolution.md  README.md  RESEARCH_DASHBOARD_PRD.md  pyproject.toml
frontier_research/: __init__.py  __main__.py  cli.py  discovery.py  models.py  providers.py
src/frontier_research/: __init__.py  cli.py  providers.py
src/frontier_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/frontier_research/discovery/: __init__.py  cli.py  models.py  providers.py  service.py
tests/: test_cli.py  test_discovery.py  test_expansion.py  test_metadata.py  test_scoring.py
